# rust_backend

./: .env  Cargo.toml
src/: main.rs
src/controllers/: create_and_edit_product.rs  create_product.rs  delete_product.rs  first_function.rs  get_product_data_by_id.rs  mod.rs  send_otp.rs  signup_user.rs
src/models/: user.rs
src/routes/: configure_routes.rs  mod.rs
src/utils/: create_data.rs  delete_data.rs  edit_data.rs  get_all_data.rs  get_data_by_id.rs  mod.rs  record_handler.rs  user_authentication.rs
