[package]
name = "my_web_application_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"
dotenv = "0.15"
tokio-postgres = "0.7"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
regex = "1.5"
anyhow = "1"
lazy_static = "1.4"

